# azure-crash-course

./: .env.sample  .gitignore  assistant.py  athena_agent_pipeline.py  azure_agent_pipeline.py  azure_agent_test.py  azure_search_pipeline.py  config.py  invoke_the_agent.py  prompts.py  pyproject.toml  search_endpoint.py  search_index.py  search_manager.py  search_manager_window.py  search_schema.py  wrapper.py
OWUI pipeline_instances/: azure_athena_agent.py  azure_legal_agent.py
OWUI pipelines sample messages/: body.json  file.json  files.json  logs.json  message.json  messages.json  regenerate.json  request_response_log_001.json  upvote.json
instructions/: 01_azure_resource_groups.md  02_azure_resource_groups.md  03_azure_searching_documents.md  04_azure_working_with_metadata.md  05_azure_vectorization.md  06_azure_chunking.md  07_azure_storage_and_blobs.md  azure_search_explorer_readme.md
